# so-delink

./: Cargo.toml  LICENSE  README.md
crates/delink-aarch64/: Cargo.toml
crates/delink-aarch64/src/: lib.rs  recover.rs
crates/delink-arch/: Cargo.toml
crates/delink-arch/src/: lib.rs
crates/delink-cli/: Cargo.toml
crates/delink-cli/src/: main.rs
crates/delink-core/: Cargo.toml
crates/delink-core/src/: binary.rs  cu.rs  error.rs  inspect.rs  lib.rs  symbols.rs
crates/delink-emit/: Cargo.toml
crates/delink-emit/src/: dwarf_relocs.rs  lib.rs
