[package]
name = "delink-aarch64"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
object.workspace = true
capstone.workspace = true
delink-core.workspace = true
delink-arch.workspace = true
