[package]
name = "delink-emit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
object.workspace = true
rayon.workspace = true
delink-core.workspace = true
delink-arch.workspace = true
delink-aarch64.workspace = true

[dev-dependencies]
memmap2.workspace = true
